app/assets/stylesheets/talks.css
/* Hacks to deal with bottstrap's navbar-fixed-top */
body {
    padding-top: 80px;
}
@media (max-width: 980px) {
    body {
	padding-top: 0;
    }
}

#week .day a[rel='tooltip']:hover {
    text-decoration: none;
}
.sidebox a.btn { text-align: left; }
.sidebox div.related a { display: block; }
.sidebox #talks-calendar .ui-datepicker {
    background: none;
}
.ui-datepicker td div.tooltip a {
    display: inline;
    color: inherit;
    text-align: inherit;
}
.ui-datepicker td div.tooltip a:hover {
    border: none;
    text-decoration:underline;
    font-weight: normal;
    background: none;
}
.ui-datepicker td a.ui-state-default {
    background: none;
    background-color: transparent;
}
.ui-datepicker td a.ui-state-active {
    color: #363636;
}
	input:focus, textarea:focus{
		background-color: #FFFFE0;
	}
	
	/** Default for all tables **/
	td {
		vertical-align: top; 		
	}
	
	/** For text boxes that have no data in **/
	input.blur {
		color: grey;
		text-align: center;
	}
	
	textarea.blur {
		color: grey;
		text-align: center;
	}

	/*For text to be printed but not appear on screen*/
	.noshow, .noshowsmall, div.docbox {
		display: none;
		}
	
	/* Urgent things */
	.urgent {
		font-weight: bold;
		color: #990000;
	}	
	
	/*Blue/grey lines, bottom carries space above*/
	.line {
		font-size:1px; 
		line-height:1px; 
		height: 4px; 
		background: #09c; 
		border-bottom: solid 2px #ccc; 
		width:100%; 
		padding:0; 
		margin: 0;
		}
	
	/** 'Action' links **/
	p.actions {
		margin-top: 0;
	}

	p.actions a, a.action {
		font-size: 80%;
		margin-right: 10px;
	/**	color: #cc3333; **/
	}

	p.actions a:hover, a:hover.action  {
	
		text-decoration: none;
		/** color: #003399; **/
	}

/** footer **/
.footer {
text-align: center;
  padding: 10px 0;
  margin-top: 70px;
  border-top: 1px solid #e5e5e5;
  background-color: #f5f5f5;
}
.footer p {
  margin-bottom: 0;
  color: #777;
}
.footer-links {
  margin: 10px 0;
}
.footer-links li {
  display: inline;
  padding: 0 2px;
}
.footer-links li:first-child {
  padding-left: 0;
}

/** Individual talks **/
div.talk {
    background-color: #FFFFCC;
    padding: 2em 2em;
}
			
div.talk img.logo, div.index img.logo {
    float: right;
    padding: 0 0 5px 5px;
}

/** Standard talk list **/
div.simpletalk {
    background-color: #ffffcc;
    /* padding: 0.5em 0 0.5em 0; */
    padding: 14px 40px;
    margin-bottom: 1em;
}

div.listdetail {
    /* padding: 14px 40px 0px; */
    margin-bottom: 1em;
}

div.listdetail a.btn b {
    font-size: 20px;
}				

div.listdetail .btn-toolbar {
    /* margin-left: -40px; */
}
/** The talks view **/
.talk ul.details img {
	position: relative;
	top: 2px;
	margin-right: 2px;
}

.talk ul.details {
    list-style: none;
    margin-left: 0;
}

.talk ul.details li {
    font-family:"News Cycle","Arial Narrow",sans-serif;
    font-size: 18px;
    color: #000;
    line-height: 28px;
}

.user img.logo {
	float: right;
	background: white;
	padding: 0 0 5px 5px;
}

p.message {
	text-align: center;
	background: orange;
	padding: 5px;
}

/* For the list edit page */
form#editlist {
	padding: 0;
	margin: 0;
}

	form#editlist h3 { 
		font-style: normal; 
		border: none; 
		margin: 1em 0 0 1px;  
		}
	
	form#editlist input[type='text'] { 
		width: 35em;
		}

	form#editlist textarea {
		width: 35em;
		height: 12em;
	}

/* For the talk edit page */

form#edittalk {
	padding: 0;
	margin: 0;
}

	form#edittalk h3 { 
		font-style: normal;
		font-size: inherit;
		border: none; 
		margin: 1em 0 0 1px;  
		}
	
	form#edittalk .wide { 
		width: 35em;
		}
	form#edittalk .date {
	        width: 8em;
	}
		
	form#edittalk p.emailcheck {
		margin: 0;
	}
	
td#edit_talk_help_container {
	vertical-align: top;
	horizontal-align: left;
	width: 50%;
}

form#special-message input[type='text'] {
    width: 80%;
}

/* For tickle email form */
form#new_tickle h3 {
    font-size: inherit;
    font-style: normal;
    border: none;
    margin: 1em 0 0 1px;
}

form#new_tickle input[type='text'], form#new_tickle textarea {
    width: 95%;
}

/* For the index pages */
ul.indexselector {

}
	ul.indexselector li {
		display: inline;
		padding: 0.1em;
	}
	
	ul.indexselector li.selected {
		background-color: #FFFFE0;
		text-decoration: underline;
		font-weight: bold;
	}
	
		ul.indexselector li a {
			font-weight: normal;
			text-decoration: none;
		}

form#viewform select { width: 90px; }
div#minimal_content { padding: 0 0.5em 1em 0.5em }
	
div.old_talks div.talklist_date { background-color: #dddddd; font-weight: bold; margin: 2em 0em 0em 0em;}
div.old_talks p { margin: 0.5em 0 0 0; }
div.old_talks div.talklist_header { font-weight: bold; }

div.table table {border-collapse: collapse;}
div.table tr.header { color: #fff; background-color: #0099cc; }
div.table th { padding: 0.5em 0.5em 0.5em 0.5em;}
div.table td.standard { padding: 1em 0.5em 1em 0.5em;}
div.table tr.even { background-color: #eeeeee; }
div.table td.date { width: 6em;}
div.table a { text-decoration:none; color: #000;}
div.table a:visited { text-decoration:none; color: #000;}
div.table a:hover 	{ text-decoration:underline; color: #003399;}
div.table td.special { padding: 1em 0.5em 0em 0.5em;}
div.table td.special_message { text-align: center; font-weight: bold; padding: 0em 0.5em 1em 0.5em; }

div.simplewithlogo h2 { font-size: 1em; font-weight: normal; margin: 2em 0 0 0;	border-bottom: none;}
div.simplewithlogo div.talk { background-color: #fff; padding: 0.2em 0 0.2em 0; }
div.simplewithlogo div.talk h3 { font-size: 1em; font-weight: bold; margin: 0 0 0 40px; }
div.simplewithlogo div.talk p { margin: 0 0 0 40px; }
div.simplewithlogo div.talk img.logo { float: left; }
div.simplewithlogo a 				{ text-decoration:none; color: #000;}
div.simplewithlogo a:visited { text-decoration:none; color: #000;}
div.simplewithlogo a:hover 	{ text-decoration:underline; color: #003399;}

div.oneday table {border-collapse: collapse; border: 0px;}
div.oneday tr.header { color: #fff; background-color: #0099cc; }
div.oneday th { padding: 0.5em 0.5em 0.5em 0.5em;}
div.oneday td.standard { padding: 1em 0.5em 1em 0.5em;}
div.oneday tr.even { background-color: #eee; }
div.oneday td.time { width: 8em;}
div.oneday td.special { padding: 1em 0.5em 0em 0.5em;}
div.oneday td.special_message { text-align: center; font-weight: bold; padding: 0em 0.5em 1em 0.5em; }
div.oneday a { text-decoration:none; color: #000;}
div.oneday a:visited { text-decoration:none; color: #000;}
div.oneday a:hover 	{ text-decoration:underline; color: #003399;}

div.day td.date { width: 7em; }
div.day td span.divider {padding:0 5px;color:#ccc;}
div.day td h3, div.day td p {
    margin-bottom: 2px;
}

div.day td {
    padding-bottom: 10px;
}

.fieldWithErrors {
  padding: 2px;
  background-color: red;
	display: inline;
}


#errorExplanation {
  width: 400px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 12px;
  margin-bottom: 20px;
  background-color: #f0f0f0;
}

#errorExplanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: -7px;
  background-color: #c00;
  color: #fff;
}

#errorExplanation p {
  color: #333;
  margin-bottom: 0;
  padding: 5px;
}

#errorExplanation ul li {
  font-size: 12px;
  list-style: square;
}

div#tellafriend form {
	display: inline;
}

.special_date {
	background-color: #f00; 
	color: #fff;
}


.lean_modal {
    width: 70%;
    padding: 2%; 
    display:none;
    background: #FFF;
    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
    box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7);
       
}
.lean_modal .modal-body{max-height:none;padding:0;}

.lean_modal textarea{
    width: 95%;
}

@media(max-width:480px) {
    .lean_modal { width: 95%; }
}


#lean_overlay {
    position: fixed;
    z-index: 10000;
    top: 0px;
    left: 0px;
    height:100%;
    width:100%;
    background: #000;
    display: none;
}

@media print {
    div.navbar, div.sidebox, footer.footer, ul.breadcrumb, div.btn-toolbar, div.toolbar, div.related, span.related { display: none; }
    a,a:visited{text-decoration:none; }
    p>a { border-bottom:0px; }
    a[href]:after{content:"";}
    
}

